<resources>
    <string name="app_name">Dr4JLU</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="mac_addr">MAC地址</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="mac_hint">12位小写字母与数字的组合</string>
    <string name="settings">设置</string>
    <string name="auto_reconnect_when_disconnected">掉线无限次自动重连(只在账号密码MAC地址都正确的时候有效)</string>
    <string name="do_not_save">不保存密码(密码为明文存储,但非root权限不可访问)</string>
    <string name="about">参见https://github.com/drcoms/jlu-drcom-client</string>
</resources>
