<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/auto_reconnect_when_disconnected_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_reconnect_when_disconnected"
            android:layout_margin="10dp"
            />
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/do_not_save_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_not_save"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_margin="10dp"
            />
    </LinearLayout>
</ScrollView>
